# pmp-mandatory-use

./: .gitignore  README.md  TABAPIREADME.md  mu.ipynb  mu.py  mu_polars.ipynb  optional_requirements.txt  pyproject.toml  requirements.txt
data/: README.md  required_files.txt
