[project]
name = "pmp-mandatory-use"
version = "0.1.0"
description = "custom prescriber mandatory use compliance module for prescription monitoring programs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "levenshtein==0.26.1",
    "nbconvert>=7.16.5",
    "polars==1.19.0",
    "tableauserverclient==0.35",
    "toml>=0.10.2",
]

[tool.ruff]
target-version='py313'

[tool.ruff.format]
quote-style = 'preserve'
indent-style = 'space'

[tool.basedpyright]
typeCheckingMode = 'standard'
